Atualização Do bug das img

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
             <section>
                 <div class="div1-2">
-                    <img id="imagemdecima" src="/brasil 2.png" alt="Bandeira do Brasil">
+                    <img id="imagemdecima" src="./brasil 2.png" alt="Bandeira do Brasil">
                     <p id="NomeReal" class="p1">Real</p>
                     <p id="ValorRealMudar" class="p2">R$ 10.000</p>
                 </div>
 
-                <img class="imagemSeta" src="/Vector.png" alt="Seta">
+                <img class="imagemSeta" src="./Vector.png" alt="Seta">
 
                 <div class="div1-2">
-                    <img id="Imagem-das-bandeiras" src="/estados-unidos (1) 1.png" alt="Bandeira do pais de conversão">
+                    <img id="Imagem-das-bandeiras" src="./estados-unidos (1) 1.png" alt="Bandeira do pais de conversão">
                     <p id="TextoDolarAmericano" class="p1">Dólar Americano</p>
                     <p id="ValorEmDolar" class="p2">$2,024.29</p>
                 </div>
